@@ -1,5 +1,5 @@
 //
-// "$Id: filename_match.cxx,v 1.5.2.4.2.3 2002/03/25 21:08:42 easysw Exp $"
+// "$Id: filename_match.cxx,v 1.5.2.4.2.4 2002/10/11 02:12:15 easysw Exp $"
 //
 // Pattern matching routines for the Fast Light Tool Kit (FLTK).
 //
@@ -92,17 +92,13 @@ int fl_filename_match(const char *s, const char *p) {
     case '\\':	// quote next character
       if (*p) p++;
     default:
-#if defined(WIN32) || defined(__CYGWIN__) || defined(__APPLE__)
       if (tolower(*s) != tolower(*(p-1))) return 0;
       s++;
-#else
-      if (*s++ != *(p-1)) return 0;
-#endif
       break;
     }
   }
 }
 
 //
-// End of "$Id: filename_match.cxx,v 1.5.2.4.2.3 2002/03/25 21:08:42 easysw Exp $".
+// End of "$Id: filename_match.cxx,v 1.5.2.4.2.4 2002/10/11 02:12:15 easysw Exp $".
 //
